# Rush-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Rudder/: CMakeLists.txt  imgui.ini
Rudder/res/: geometryPass.glsl  lightBoxShader.glsl  lightingPass.glsl  lineShader.glsl  materialShader.glsl  renderviewAlbedo.glsl  renderviewNormals.glsl  renderviewPreview.glsl  renderviewSpecular.glsl  textureShader2D.glsl
Rudder/res/materials/: brick.mat
Rudder/res/scenes/: new.scene  test.scene  test2.scene
Rudder/res/shaders/: basicShader.glsl  materialShader.glsl  renderviewAlbedo.glsl  renderviewNormals.glsl  renderviewPreview.glsl  renderviewSpecular.glsl  selectionShader.glsl  skyboxShader.glsl  textureShader2D.glsl
Rudder/res/shaders/refs/: Effect.xml  ForwardFragmentShaderReference.frag  GeometryPassFragmentShaderReference.frag
Rudder/src/: EditorApplication.cpp  EditorLayer.cpp  EditorLayer.h  EntityEditorWidget.cpp  EntityEditorWidget.h  FileBrowser.cpp  GlobalEntitySelection.cpp  GlobalEntitySelection.h  Rudderpch.h
Rudder/src/views/: AssetView.cpp  AssetView.h  CameraController.cpp  CameraController.h  EditorComponents.h  ExceptionPanel.cpp  ExceptionPanel.h  ProfilerResultView.cpp  ProfilerResultView.h  RenderViews.cpp  RenderViews.h  SceneGraphView.cpp  SceneGraphView.h  SceneView.cpp  SceneView.h
Rudder/src/widgets/: EntityEditorWidget.cpp  EntityEditorWidget.h  FileBrowser.cpp  FileBrowser.h
Rush-Engine/: CMakeLists.txt  Rush.h  RushVersion.h
Rush-Engine/Libraries/glad/: CMakeLists.txt
Rush-Engine/Libraries/glad/include/glad/: glad.h
Rush-Engine/Libraries/glad/src/: glad.c
Rush-Engine/cmake/: AddDependencies.cmake  FindMono.cmake
Rush-Engine/cmake-config/: RushVersion.h.in
Rush-Engine/include/: Rush.h  print.h
Rush-Engine/src/: Rush.h  Rushpch.h  print.cpp  print.h  rush_core.h
Rush-Engine/src/Logger/: Logger.cpp
Rush-Engine/src/Platform/OpenGL/: GLFWContext.cpp  GLFWContext.h  GLFWWindow.cpp  GLFWWindow.h  OGLCubemap.cpp  OGLCubemap.h  OGLFramebuffer.cpp  OGLFramebuffer.h  OGLIndexBuffer.cpp  OGLIndexBuffer.h  OGLRenderingAPI.cpp  OGLRenderingAPI.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OGLUniformBuffer.cpp  OGLUniformBuffer.h  OGLVertexArray.cpp  OGLVertexArray.h  OGLVertexBuffer.cpp  OGLVertexBuffer.h  ShaderDataUtil.cpp  ShaderDataUtil.h
Rush-Engine/src/Rush/core/: AbstractWindow.cpp  AbstractWindow.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Context.h  Core.h  EntryPoint.cpp  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Random.cpp  Random.h  ResourceLoader.cpp  ResourceLoader.h  Settings.cpp  Settings.h  Time.cpp  Time.h
Rush-Engine/src/Rush/debug/: DebugLayer.cpp  DebugLayer.h
Rush-Engine/src/Rush/events/: ApplicationEvent.h  Event.h  EventManager.h  EventQueue.cpp  EventQueue.h  KeyboardEvent.h  Keycodes.h  MouseEvent.h  Mousecodes.h  WindowEvent.h
Rush-Engine/src/Rush/graphics/: Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  LineRenderer.cpp  LineRenderer.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RenderingAPI.cpp  RenderingAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Rush-Engine/src/Rush/graphics/particles/: ParticleSystem.cpp  ParticleSystem.h
Rush-Engine/src/Rush/imgui/: ImguiImpl.cpp  ImguiLayer.cpp  ImguiLayer.h
Rush-Engine/src/Rush/physics/: AABBCollider.cpp  AABBCollider.h  BaseCollider.cpp  BaseCollider.h  BoxCollider.cpp  BoxCollider.h  CollisionDetection.cpp  CollisionDetection.h  PhysicsSystem.cpp  PhysicsSystem.h  Rigidbody.h  SphereCollider.cpp  SphereCollider.h
Rush-Engine/src/Rush/physics/collisionRoutines/: BoxCollisionRoutines.cpp  CollisionRoutines.h  SphereCollisionRoutines.cpp
Rush-Engine/src/Rush/profiling/: Profiler.cpp  Profiler.h
Rush-Engine/src/Rush/resources/: AssetManager.cpp  AssetManager.h  File.cpp  File.h  FileCacher.cpp  FileCacher.h  FileLinux.cpp  FileLinux.inl  FileWindows.cpp  Material.cpp  Material.h  MaterialInstance.h  MeshInstance.h  ModelLoader.cpp  ModelLoader.h  Path.cpp  Path.h  RootMesh.h  SubMesh.h
Rush-Engine/src/Rush/scene/: Camera.cpp  Camera.h  Components.h  Entity.h  Light.h  Material.h  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Scene.inl  SceneLayer.cpp  SceneLayer.h  Transform.h
Rush-Engine/src/Rush/scene/components/: CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshRendererComponent.h  ParticleComponent.h  RuntimeScriptComponent.h  ScriptComponent.h  TagComponent.h  TransformComponent.cpp  TransformComponent.h
Rush-Engine/src/Rush/scripting/: Behaviour.binding.cpp  Behaviour.binding.h  BindingBase.h  Entity.binding.cpp  Entity.binding.h  ExceptionManager.cpp  ExceptionManager.h  ScriptingBackend.cpp  ScriptingBackend.h
Rush-Engine/src/Rush/scripting/components/: Component.binding.cpp  Component.binding.h  LightComponent.binding.cpp  LightComponent.binding.h  TransformComponent.binding.cpp  TransformComponent.binding.h
Rush-Engine/src/Rush/scripting/csbindings/: Behaviour.cs  (+2 more)
Rush-Engine/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h  Logger.cpp  Logger.h  Window.cpp  Window.h  rush_core.cpp  rush_core.h
Rush-Engine/src/datastructures/: Queue.h  TSLinkedQueue.h
Rush-Engine/src/events/: Event.h  EventManager.h  Keycodes.h  Mousecodes.h  WindowEvent.h
Rush-Engine/src/graphics/: Context.h  GLFWContext.cpp  GLFWContext.h
Rush-Engine/src/window/: AbstractWindow.cpp  AbstractWindow.h  GLFWWindow.cpp  GLFWWindow.h
Sandbox/: CMakeLists.txt
Sandbox/res/: test.glsl
Sandbox/res/shaders/: lightingPass.glsl  lineShader.glsl  materialShader.glsl  particleShader.glsl  renderviewAlbedo.glsl  renderviewNormals.glsl  renderviewPreview.glsl  selectionShader.glsl  skyboxShader.glsl
Sandbox/res/shaders/refs/: VertexShaderReference.vert
Sandbox/src/: CameraController.cpp  CameraController.h  SandboxLayer.cpp  SandboxLayer.h  main.cpp
(+17 files in other folders)
